--- a/project/project_definition.ipynb
+++ b/project/project_definition.ipynb
@@ -888,6 +888,82 @@
     "    df = df.reset_index()\n",
     "    df.plot(x = j,kind='bar',figsize=(10,6));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No es necesario **preprocesamiento e **Respecto a la **inputación**, tenemos que hacer algo con las filas que contienen un dato perdido en al columna 11, `stalk-root` ya que representan 1/4 de los datos:\n",
+    "\n",
+    "* rellenar con algún valor fijo (como la moda) no es una buena opción ya que estariamos cargando 1/4 de los datos a una opción, recordemos que son 2480 registros con valor perdido.\n",
+    "* eliminar las 2480 filas no parece una buena opción ya que esto corresponde a solo una columan de 22 y hay mucha información relevante en esas 21 variables faltantes.\n",
+    "* opción 1: podriamos considerarlo como una categoría más. En el caso de ser concluyente en el análisis cambiariamos de criterio.\n",
+    "* opción 2: (un poco más complejo) realizar una \"regresión\" con la colummna 11 como target. Tenemos 3/4 de los datos para entrenar, lo que entra dentro de un rango efectivo. También hay otros métodos más rebuscados, EM,etc pero están conceptualmente fuera de lo trabajado [Techniques of dealing with missing data](https://en.wikipedia.org/wiki/Missing_data#Techniques_of_dealing_with_missing_data).\n",
+    "\n",
+    "Podemos ver de forma exhaustiva con ayuda del `.describe` que las columnas solo tienen los elementos que deberían tener. A parte de esto no tenemos elemento nulos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class                       False\n",
+       "cap-shape                   False\n",
+       "cap-surface                 False\n",
+       "cap-color                   False\n",
+       "bruises                     False\n",
+       "odor                        False\n",
+       "gill-attachment             False\n",
+       "gill-spacing                False\n",
+       "gill-size                   False\n",
+       "gill-color                  False\n",
+       "stalk-shape                 False\n",
+       "stalk-root                  False\n",
+       "stalk-surface-above-ring    False\n",
+       "stalk-surface-below-ring    False\n",
+       "stalk-color-above-ring      False\n",
+       "stalk-color-below-ring      False\n",
+       "veil-type                   False\n",
+       "veil-color                  False\n",
+       "ring-number                 False\n",
+       "ring-type                   False\n",
+       "spore-print-color           False\n",
+       "population                  False\n",
+       "habitat                     False\n",
+       "count_p_e                   False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mushroom.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputacion de datos faltantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balanceo de datos"
+   ]
   }
  ],
  "metadata": {
